# minimalist-backend

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  env.production.example  example.config.yaml  example.secret.yaml
.sqlx/: query-01ce7f8384ddd1da061f8c294fdf9c4e8d9ea5d0a2985cf66958a95db4542781.json  query-039ae57aabda120c2bd1f76b1fb101d86dac6e3c2ff93a8bf1687c710085cefa.json  query-06b11bbbd84a86a6140097954441aed8ca600ad347618caa72b1d25316bd9ca0.json  query-142c855d4f9b7c5b586716eb60c72124d24884f10d4769360a9d819d63745712.json  query-188becf14d63efdc34639200fb4cfde2f97314aa2e9fd478d9e6a82e1a540d99.json  query-2b3a52670d9477633f7d60a4b471082c13c824e600cdaeb85b96d2bc1c36c5b1.json  query-31eddfb4cb794f03a0060b2ec583b7395af0cbfc4cad6722c3d4f7507e71aa72.json  query-35b76d1d9dd92cfc8fffefe86db4eba52eaed4957dff859fb53d1867901528ea.json  query-4109741d4ecb34cd7c0a41d796f8c2c1d2175f678fca7e0c54cfff6080d57565.json  query-4111d3b9d6b607ed2e1d0903beb1e2fe0e715d6d5be201c5595447411b9abf33.json  query-4137400f25036461bd92d9b04a6ab4659feada9c51d1073b7896b622b2b88027.json  query-41cdf5f685806856ac30bb25643dfb0e7ee41237c1ef0c8ef6c54d7aecdd7da2.json  query-530b23167037e2f99504fe1bd40917c1fb517055478e9ee86e63896a7cb11207.json  query-538bafebcc9c4b1ab1f7f5a2f615a2735342f7c95b66c01530dc9692d8401a2a.json  query-559f6aa384c2dc158bf8045c1687795d1f51fb8127bc09b686a2a9e4103a6fce.json  query-5dba6f55680a1f1ee9f5d3b73397ff925243855eca52fb030f6dd9da82cb3d4b.json  query-5dcfb40984b873282b727b2af64029ee1abb35c10673095c4aefca98cd4ca69d.json  query-5f4dd87d2f95b162ada4bc3ac3a3e4f557ff51af7b595aabe3610002a98c7c70.json  query-6bc93772bdb327c2931ed21888b6cead0aba4d1f2ea3bba26d48a77f2c1b4385.json  query-6c03d508d91b8ca1c884d5b02b360e50e6bd0b42d67514729447787f47451a8f.json  query-79067a2c7f55f8a1211a46b70384691fa7a547e2d9fe3d66794aeb808f1ccedc.json  (+25 more)
migrations/: 002_create_posts.sql  003_create_portfolio.sql  (+8 more)
(+52 files in other folders)
