[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance Rust backend for portfolio website"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip", "trace"] }
hyper = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal", "ipnetwork"] }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.0"
argon2 = "0.5"
rand = "0.8"

# UUID & Time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"

# Configuration
config = "0.14"
dotenvy = "0.15"
serde_yaml = "0.9"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Enhanced Security
tower_governor = "0.4"
headers = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Performance
dashmap = "5.5"
once_cell = "1.19"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }



[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
overflow-checks = true 